<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inject</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="checkType">类型</string>
    <string name="checkIssue">主题</string>
    <string name="detail">说明</string>
    <string name="detailHint">填写说明</string>
    <string name="checkRemark">备注</string>
    <string name="checkRemarkHint">填写备注</string>
    <string name="performer"> 选择督察指令执行者:</string>
     <string name="choice">选择</string>

</resources>